--- a/JsInvest/package.json
+++ b/JsInvest/package.json
@@ -11,6 +11,9 @@
     "jsdom": "^9.4.1",
     "lodash": "^4.14.1",
     "moment": "^2.14.1",
-    "q": "^1.4.1"
+    "nconf": "^0.8.4",
+    "q": "^1.4.1",
+    "qlimit": "^0.1.1",
+    "request": "^2.74.0"
   }
 }
